# maenggu-run

./: .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  README.md  SPEC.md  electron-builder.json5  package.json  pnpm-lock.yaml  prd.json  progress.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/workflows/: release.yml
.sisyphus/: ralph-loop.local.md
assets/: sprite.json
electron/: electron-env.d.ts  main.ts  preload.ts
scripts/: sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts  save-scheduler.ts  save.ts  snack-state.ts
src/main/ipc/: save.ts  snack.ts
src/preload/: index.ts
src/renderer/: App.tsx  Settings.tsx  env.d.ts  index.css  index.html  index.tsx  tauri-api.ts
src/renderer/animation/: sprite-loader.test.ts  sprite-loader.ts  state-machine.test.ts  state-machine.ts
src/renderer/components/: FloatingText.tsx  Maenggu.tsx  SnackCounter.tsx  SpeechBubble.tsx
src/renderer/game/: constants.ts  create-initial-state.ts  sprite-loader.ts  sprite-pack.test.ts  sprite-pack.ts  state-machine.test.ts  state-machine.ts  target.test.ts  target.ts  types.ts  update-animation.test.ts  update-animation.ts  update-movement.test.ts  update-movement.ts  update.test.ts  update.ts  vector.test.ts  vector.ts
src/renderer/hooks/: useAnimation.test.ts  useAnimation.ts  useFloatingTexts.ts  useIdleTimer.test.ts  useIdleTimer.ts  useMaenggu.ts  useMaengguState.ts  useMealReminder.ts  useMouseCollider.ts  useMovement.test.ts  useMovement.ts
src/renderer/movement/: target.test.ts  target.ts  vector.test.ts  vector.ts
src/shared/: constants.ts  types.ts  utils.ts
