[package]
name = "maenggu-run"
version = "0.1.0"
description = "Desktop pet app - a pixel dog running on your screen"
authors = ["hazzzi"]
license = "MIT"
repository = "https://github.com/hazzzi/maenggu-run"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maenggu_run_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-log = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
