[package]
name = "maenggu-run"
version = "0.2.1"
description = "Desktop pet app - a pixel dog running on your screen"
authors = ["hazzzi"]
license = "MIT"
repository = "https://github.com/hazzzi/maenggu-run"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maenggu_run_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
rfd = "0.15"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
